<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.vivo.internet</groupId>
    <artifactId>moonbox</artifactId>
    <packaging>pom</packaging>
    <version>1.0.0-SNAPSHOT</version>

    <modules>
        <module>moonbox-agent</module>
        <module>moonbox-server</module>
        <module>moonbox-common</module>
    </modules>

    <name>moonbox</name>
    <description>moonbox opensource</description>

    <properties>
        <java.version>17</java.version>
        <spring.boot.version>3.4.5</spring.boot.version>
        <spring.version>6.2.6</spring.version>
        <tomcat.version>10.1.44</tomcat.version>
		<org.slf4j.version>2.0.17</org.slf4j.version>
		<logback.version>1.5.18</logback.version>
        <elasticsearch.version>7.17.29</elasticsearch.version>
        <jackson-core.version>2.18.3</jackson-core.version>
        <jackson-databind.version>2.18.3</jackson-databind.version>
        <testng.version>6.14.3</testng.version>
        <commons-collections4.version>4.4</commons-collections4.version>
        <okhttp.version>4.12.0</okhttp.version>
        <!--打包相关-->
        <maven.surefire.plugin>3.0.0-M4</maven.surefire.plugin>
        <maven.compiler.plugin.version>3.8.0</maven.compiler.plugin.version>
        <jsch.version>2.27.2</jsch.version>
        <apache.common.lang.version>3.18.0</apache.common.lang.version>
        <apache.common.io.version>2.20.0</apache.common.io.version>
        <lombok.version>1.18.30</lombok.version>
        <sandbox.api.version>1.4.0</sandbox.api.version>
        <guava.version>33.4.8-jre</guava.version>
        <page.helper>5.3.3</page.helper>
        <metainf-services>1.11</metainf-services>
        <sandbox.version>1.4.0</sandbox.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!--spring-->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-web</artifactId>
                <version>${spring.boot.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter</artifactId>
                <version>${spring.boot.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-test</artifactId>
                <scope>test</scope>
                <version>${spring.boot.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <version>${spring.boot.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-validation</artifactId>
                <version>${spring.boot.version}</version>
            </dependency>
            <!--test-->
            <dependency>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven.surefire.plugin}</version>
            </dependency>
			<!-- logger -->
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>${org.slf4j.version}</version>
			</dependency>
			<dependency>
				<groupId>ch.qos.logback</groupId>
				<artifactId>logback-classic</artifactId>
				<version>${logback.version}</version>
			</dependency>
            <!--DB-->
            <dependency>
                <groupId>org.mybatis.spring.boot</groupId>
                <artifactId>mybatis-spring-boot-starter</artifactId>
                <version>2.0.0</version>
            </dependency>
            <dependency>
                <groupId>org.mariadb.jdbc</groupId>
                <artifactId>mariadb-java-client</artifactId>
                <version>2.6.0</version>
            </dependency>
            <!-- elasticsearch -->
            <dependency>
                <groupId>org.elasticsearch.client</groupId>
                <artifactId>elasticsearch-rest-high-level-client</artifactId>
                <version>${elasticsearch.version}</version>
            </dependency>
            <dependency>
                <groupId>org.elasticsearch</groupId>
                <artifactId>elasticsearch</artifactId>
                <version>${elasticsearch.version}</version>
            </dependency>
            <!--Util-->
            <!-- https://mvnrepository.com/artifact/com.jcraft/jsch -->
            <!-- https://mvnrepository.com/artifact/com.github.mwiede/jsch -->
            <dependency>
                <groupId>com.github.mwiede</groupId>
                <artifactId>jsch</artifactId>
                <version>${jsch.version}</version>
            </dependency>
            <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>${apache.common.lang.version}</version>
            </dependency>
            <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
            <dependency>
                <groupId>commons-io</groupId>
                <artifactId>commons-io</artifactId>
                <version>${apache.common.io.version}</version>
            </dependency>
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
            </dependency>
            <dependency>
                <groupId>com.alibaba</groupId>
                <artifactId>fastjson</artifactId>
                <version>1.2.83</version>
            </dependency>
            <!-- jackson -->
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-core</artifactId>
                <version>${jackson-core.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-databind</artifactId>
                <version>${jackson-databind.version}</version>
            </dependency>
            <dependency>
                <groupId>org.testng</groupId>
                <artifactId>testng</artifactId>
                <version>${testng.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>${guava.version}</version>
            </dependency>
            <dependency>
                <groupId>com.github.pagehelper</groupId>
                <artifactId>pagehelper</artifactId>
                <version>${page.helper}</version>
            </dependency>
            <dependency>
                <groupId>org.kohsuke.metainf-services</groupId>
                <artifactId>metainf-services</artifactId>
                <version>${metainf-services}</version>
            </dependency>
            <dependency>
                <groupId>com.vivo.internet</groupId>
                <artifactId>moonbox-service-data</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.vivo.internet</groupId>
                <artifactId>moonbox-service-console</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <artifactId>moonbox-service-console</artifactId>
                <groupId>com.vivo.internet</groupId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <artifactId>moonbox-service-agent</artifactId>
                <groupId>com.vivo.internet</groupId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.vivo.internet</groupId>
                <artifactId>moonbox-data</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.vivo.internet</groupId>
                <artifactId>moonbox-tools</artifactId>
                <version>${project.version}</version>
            </dependency>
<!--            <dependency>-->
<!--                <groupId>com.vivo.internet</groupId>-->
<!--                <artifactId>moonbox-hessian-lite</artifactId>-->
<!--                <version>${project.version}</version>-->
<!--            </dependency>-->
            <dependency>
                <artifactId>moonbox-service-common</artifactId>
                <groupId>com.vivo.internet</groupId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-collections4</artifactId>
                <version>${commons-collections4.version}</version>
            </dependency>
            <dependency>
                <groupId>com.squareup.okhttp3</groupId>
                <artifactId>okhttp</artifactId>
                <version>${okhttp.version}</version>
            </dependency>
            <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
            <dependency>
                <groupId>mysql</groupId>
                <artifactId>mysql-connector-java</artifactId>
                <version>8.0.33</version>
            </dependency>
            <dependency>
                <groupId>com.alibaba.jvm.sandbox</groupId>
                <artifactId>sandbox-core</artifactId>
                <version>1.4.0</version>
            </dependency>
            <dependency>
                <groupId>com.alibaba.jvm.sandbox</groupId>
                <artifactId>sandbox-agent</artifactId>
                <version>1.4.0</version>
            </dependency>
            <dependency>
                <groupId>jakarta.servlet</groupId>
                <artifactId>jakarta.servlet-api</artifactId>
                <version>6.0.0</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

</project>
